--- a/src/app/admin/home-admin.html
+++ b/src/app/admin/home-admin.html
@@ -1,1 +1,4 @@
-HOME_ADMIN
+<app-header></app-header>
+<div class="md-padding" ui-view flex>
+    <div class="md-padding" ui-view flex></div>
+</div>
