--- a/src/app/admin/groups/groups.html
+++ b/src/app/admin/groups/groups.html
@@ -1,1 +1,47 @@
-GROUPS
+<md-toolbar class="md-theme-light">
+    <div class="md-toolbar-tools" >
+        <span flex-gt-xs="65">Групи</span>
+
+        <md-input-container flex-gt-xs="25" class="md-accent">
+            <label>Пошук</label>
+            <input ng-model="groups.search">
+        </md-input-container>
+
+        <md-button class="md-fab md-accent md-mini" ng-click="groups.showSaveForm()">
+            <md-tooltip md-direction="top">Додати</md-tooltip>
+            <md-icon md-svg-src="images/ic_add_white_18px.svg"></md-icon>
+        </md-button>
+    </div>
+</md-toolbar>
+
+<md-content>
+    <md-list>
+        <md-subheader class="md-no-sticky">
+            Назва-------------------Опис
+        </md-subheader>
+
+        <md-list-item layout="row" ng-repeat="group in groups.list">
+            <div flex-gt-xs="35">
+                <h4>{{::group.group_name}}</h4>
+            </div>
+
+            <!--<div flex-gt-xs="45">-->
+                <!--<p>{{::group.faculty_description}}</p>-->
+            <!--</div>-->
+
+            <div flex-gt-xs="20">
+                <md-button class="md-fab md-primary md-mini" ng-click="groups.showSaveForm(group)">
+                    <md-tooltip md-direction="top">Редагувати</md-tooltip>
+                    <md-icon md-svg-src="images/ic_edit_white_18px.svg"></md-icon>
+                </md-button>
+
+                <md-button class="md-fab md-primary md-mini" ng-click="groups.removeGroup(group)">
+                    <md-tooltip md-direction="top">Видалити</md-tooltip>
+                    <md-icon md-svg-src="images/ic_delete_forever_white_18px.svg"></md-icon>
+                </md-button>
+            </div>
+
+            <md-divider ng-if="!$last"></md-divider>
+        </md-list-item>
+    </md-list>
+</md-content>
