--- a/src/app/admin/faculties/faculties.html
+++ b/src/app/admin/faculties/faculties.html
@@ -17,10 +17,10 @@
 <md-content>
     <md-list>
         <md-subheader class="md-no-sticky">
-            Назва-------------------Опис
+
         </md-subheader>
 
-        <md-list-item layout="row" ng-repeat="faculty in faculties.list">
+        <md-list-item layout="row" ng-repeat="faculty in faculties.list" layout-wrap>
             <div flex-gt-xs="35">
                 <h4>{{::faculty.faculty_name}}</h4>
             </div>
@@ -29,7 +29,7 @@
                 <p>{{::faculty.faculty_description}}</p>
             </div>
 
-            <div flex-gt-xs="20">
+            <div flex-gt-xs="20" style="text-align:right">
                 <md-button class="md-fab md-primary md-mini" ng-click="faculties.getGroupsByFaculty(faculty)">
                     <md-tooltip md-direction="top">Групи</md-tooltip>
                     <md-icon md-svg-src="images/ic_group_white_18px.svg"></md-icon>
