--- a/src/app/admin/groups/groups.html
+++ b/src/app/admin/groups/groups.html
@@ -17,11 +17,11 @@
 <md-content>
     <md-list>
         <md-subheader class="md-no-sticky">
-            Назва-------------------Опис
+
         </md-subheader>
 
-        <md-list-item layout="row" ng-repeat="group in groups.list">
-            <div flex-gt-xs="35">
+        <md-list-item layout="row" ng-repeat="group in groups.list" layout-wrap>
+            <div flex-gt-xs="80">
                 <h4>{{::group.group_name}}</h4>
             </div>
 
@@ -29,7 +29,7 @@
                 <!--<p>{{::group.faculty_description}}</p>-->
             <!--</div>-->
 
-            <div flex-gt-xs="20">
+            <div flex-gt-xs="20" style="text-align:right">
                 <md-button class="md-fab md-primary md-mini" ng-click="groups.showSaveForm(group)">
                     <md-tooltip md-direction="top">Редагувати</md-tooltip>
                     <md-icon md-svg-src="images/ic_edit_white_18px.svg"></md-icon>
