--- a/src/app/admin/specialities/specialities.html
+++ b/src/app/admin/specialities/specialities.html
@@ -1,23 +1,33 @@
 <md-toolbar class="md-theme-light">
     <div class="md-toolbar-tools" >
-        <span flex-gt-xs="65">Спеціальності</span>
-
-        <md-input-container flex-gt-xs="25" class="md-accent">
+        <md-input-container flex-gt-xs="25" class="md-accent" style="margin-top: 36px; margin-bottom: 0px">
             <label>Пошук</label>
             <input ng-model="specialities.search">
         </md-input-container>
 
-        <md-button class="md-fab md-accent md-mini" ng-click="specialities.showSaveForm()">
-            <md-tooltip md-direction="top">Додати</md-tooltip>
-            <md-icon md-svg-src="images/ic_add_white_18px.svg"></md-icon>
-        </md-button>
+        <p flex-gt-xs="75"></p>
+
+        <div class="md-secondary">
+            <md-button class="md-fab md-accent md-mini" ng-click="specialities.showSaveForm()">
+                <md-tooltip md-direction="top">Додати</md-tooltip>
+                <md-icon md-svg-src="images/ic_add_white_18px.svg"></md-icon>
+            </md-button>
+        </div>
     </div>
 </md-toolbar>
 
 <md-content>
     <md-list>
         <md-subheader class="md-no-sticky">
+            <div layout="row">
+                <div flex-gt-xs="55">
+                    <span>Назва спеціальності</span>
+                </div>
 
+                <div flex-gt-xs="25">
+                    <span>Код</span>
+                </div>
+            </div>
         </md-subheader>
 
         <md-list-item layout="row" ng-repeat="speciality in specialities.list" layout-wrap>
@@ -29,7 +39,7 @@
                 <p>{{::speciality.speciality_code}}</p>
             </div>
 
-            <div flex-gt-xs="20" style="text-align:right">
+            <div flex-gt-xs="20"  class="md-secondary">
                 <md-button class="md-fab md-primary md-mini" ng-click="specialities.getGroupsBySpeciality(speciality)">
                     <md-tooltip md-direction="top">Групи</md-tooltip>
                     <md-icon md-svg-src="images/ic_group_white_18px.svg"></md-icon>
