--- a/src/app/admin/specialities/save-speciality.html
+++ b/src/app/admin/specialities/save-speciality.html
@@ -1,12 +1,12 @@
 <md-bottom-sheet class="md-list md-has-header" ng-cloak>
     <form name="saveForm" layout="row">
-        <md-input-container flex-gt-xs="50">
-            <label>Назва факультету</label>
+        <md-input-container flex-gt-xs="55">
+            <label>Назва спеціальності</label>
             <input ng-model="form.entity.speciality_name" name="specialityName" type="text" required>
         </md-input-container>
 
-        <md-input-container flex-gt-xs="20">
-            <label>Опис факультету</label>
+        <md-input-container flex-gt-xs="25">
+            <label>Код спеціальності</label>
             <input ng-model="form.entity.speciality_code" name="specialityCode" type="text" required>
         </md-input-container>
 
