--- a/src/app/admin/faculties/faculties.html
+++ b/src/app/admin/faculties/faculties.html
@@ -1,35 +1,45 @@
 <md-toolbar class="md-theme-light">
     <div class="md-toolbar-tools" >
-        <span flex-gt-xs="65">Факультети</span>
-
-        <md-input-container flex-gt-xs="25" class="md-accent">
+        <md-input-container flex-gt-xs="25" class="md-accent" style="margin-top: 36px; margin-bottom: 0px">
             <label>Пошук</label>
             <input ng-model="faculties.search">
         </md-input-container>
 
-        <md-button class="md-fab md-accent md-mini" ng-click="faculties.showSaveForm()">
-            <md-tooltip md-direction="top">Додати</md-tooltip>
-            <md-icon md-svg-src="images/ic_add_white_18px.svg"></md-icon>
-        </md-button>
+        <p flex-gt-xs="75"></p>
+
+        <div class="md-secondary">
+            <md-button class="md-fab md-accent md-mini" ng-click="faculties.showSaveForm()">
+                <md-tooltip md-direction="top">Додати</md-tooltip>
+                <md-icon md-svg-src="images/ic_add_white_18px.svg"></md-icon>
+            </md-button>
+        </div>
     </div>
 </md-toolbar>
 
 <md-content>
     <md-list>
         <md-subheader class="md-no-sticky">
+            <div layout="row">
+                <div flex-gt-xs="40">
+                    <span>Назва факультету</span>
+                </div>
 
+                <div flex-gt-xs="40">
+                    <span>Опис</span>
+                </div>
+            </div>
         </md-subheader>
 
         <md-list-item layout="row" ng-repeat="faculty in faculties.list" layout-wrap>
-            <div flex-gt-xs="35">
+            <div flex-gt-xs="40">
                 <h4>{{::faculty.faculty_name}}</h4>
             </div>
 
-            <div flex-gt-xs="45">
+            <div flex-gt-xs="40">
                 <p>{{::faculty.faculty_description}}</p>
             </div>
 
-            <div flex-gt-xs="20" style="text-align:right">
+            <div flex-gt-xs="20" class="md-secondary">
                 <md-button class="md-fab md-primary md-mini" ng-click="faculties.getGroupsByFaculty(faculty)">
                     <md-tooltip md-direction="top">Групи</md-tooltip>
                     <md-icon md-svg-src="images/ic_group_white_18px.svg"></md-icon>
