--- a/src/app/admin/groups/groups.html
+++ b/src/app/admin/groups/groups.html
@@ -2,7 +2,7 @@
     <div class="md-toolbar-tools">
         <md-input-container flex-gt-xs="25" class="md-accent" style="margin-top: 36px; margin-bottom: 0px">
             <label>Пошук</label>
-            <input ng-model="groups.search">
+            <input ng-model="groups.search" ng-change="groups.filterByName()">
         </md-input-container>
 
         <p flex-gt-xs="75"></p>
@@ -34,7 +34,7 @@
             </div>
         </md-subheader>
 
-        <md-list-item layout="row" ng-repeat="group in groups.list" layout-wrap>
+        <md-list-item layout="row" ng-repeat="group in groups.filtered" layout-wrap>
             <div flex-gt-xs="20">
                 <h4>{{::group.group_name}}</h4>
             </div>
