--- a/src/app/admin/specialities/save-speciality.html
+++ b/src/app/admin/specialities/save-speciality.html
@@ -1,25 +1,30 @@
-<md-bottom-sheet class="md-list md-has-header" ng-cloak>
-    <form name="saveForm" layout="row">
-        <md-input-container flex-gt-xs="55">
-            <label>Назва спеціальності</label>
-            <input ng-model="form.entity.speciality_name" name="specialityName" type="text" required>
-        </md-input-container>
+<md-dialog aria-label="List dialog" ng-cloak style="width: 500px">
+    <form name="saveForm">
+        <md-dialog-content>
+            <div class="md-dialog-content">
+                <md-input-container layout="row">
+                    <label>Назва спеціальності</label>
+                    <input ng-model="form.entity.speciality_name" name="specialityName" type="text" required>
+                </md-input-container>
 
-        <md-input-container flex-gt-xs="25">
-            <label>Код спеціальності</label>
-            <input ng-model="form.entity.speciality_code" name="specialityCode" type="text" required>
-        </md-input-container>
+                <md-input-container layout="row">
+                    <label>Код спеціальності</label>
+                    <input ng-model="form.entity.speciality_code" name="specialityCode" type="text" required>
+                </md-input-container>
+            </div>
+        </md-dialog-content>
 
-        <div flex-gt-xs="20">
+        <md-dialog-actions>
             <md-button type="submit" class="md-fab md-primary md-mini" ng-click="form.clickSave(form.entity)"
                        ng-disabled="saveForm.$invalid">
                 <md-tooltip md-direction="top">Зберегти</md-tooltip>
                 <md-icon md-svg-src="images/ic_done_white_18px.svg"></md-icon>
             </md-button>
+
             <md-button type="reset" class="md-fab md-primary md-mini" ng-click="form.clickCancel()">
                 <md-tooltip md-direction="top">Відмінити</md-tooltip>
                 <md-icon md-svg-src="images/ic_clear_white_18px.svg"></md-icon>
             </md-button>
-        </div>
+        </md-dialog-actions>
     </form>
-</md-bottom-sheet>
+</md-dialog>
