--- a/src/app/admin/groups/groups.html
+++ b/src/app/admin/groups/groups.html
@@ -34,7 +34,7 @@
             </div>
         </md-subheader>
 
-        <md-list-item layout="row" ng-repeat="group in groups.filtered" layout-wrap>
+        <md-list-item layout="row" ng-repeat="group in groups.filtered" layout-wrap ng-cloak>
             <div flex-gt-xs="20">
                 <h4>{{::group.group_name}}</h4>
             </div>
